deploy/mtls/igw/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: sentences
spec:
  hosts:
  - "sentences.istio.eficode.academy"
  gateways:
  - $SENTENCES_INGRESSGATEWAY_NS/sentences
  http:
  - route:
    - destination:
        host: sentences
